# LLM_Training_0001

./: .antigravityignore  .gitignore  README.md  analyze_dataset.py  analyze_scaling.py  calculate_optimal_model.py  check_file.py  check_torch.py  config.py  current_run_config.json  ds_config.json  experiment_config.json  inference_output.txt  last_run_result.json  launch_tensorboard.bat  learning_report_and_future_policy_20260630.md  main.py  pyproject.toml  requirements.txt  resume_training.bat  run_50m_test.bat  run_hpo.bat  run_inference.bat  run_train.bat  run_training.bat  setup.bat  setup.py  temp_ds_config.json  test_150m.py  train.bat  training_config.py
LLM_Hyperparameter_Optimization/docs/: 実装計画.md
LLM_Hyperparameter_Optimization/src/: ablation_plan.py  run_125M.py  step_law.py  step_law_validation.py  trainer.py  wsd.py
config/: config.yaml  experiment_lr_0003.yaml
configs/: config.yaml  experiment_config.json  extension_config.yaml  hparams_150M.yaml  hparams_150M_test.yaml  hparams_50M_test.yaml  hparams_test.yaml  multi_seed.yaml  scaling_150m.yaml  scaling_3b.yaml  scaling_50m.yaml  scaling_7b.yaml  test_quick.yaml
data/: corpus.jsonl.dvc  dataset.jsonl.dvc  split_stats.json  tokenizer.json  tokenizer.json.dvc  tokenizer_novel64k.model  tokenizer_novel64k.vocab  vocab.json
docs/: LLM_アーキテクチャ詳細設計書.md  LLMフルスクラッチトレーニング_工夫.md  LLMモデル詳細設計書.md  Research_Foundation.md  System_Flowchart.md  アーキテクチャ詳細設計書.md  シーケンス図.md  フローチャート図.md  実装計画.md  概念的要件定義書.md
docs/ADR/: 001-architecture-llama-and-hybrid-inference.md  005-vocab-64k-end-of-story.md  006-config-yaml-minimalization.md  007-loguru-adoption.md  008-windows-native-compatibility.md  009-pilot-automation.md  009-step-law-lr-correction.md  011-hpo-scaling-law-expansion.md  013-hf-standard-stack-migration.md  014-offline-hpo-separation.md  015-hydra-defaults-config-pattern.md  016-tensorboard-only-logging.md  017-local-tokenizer-json-loading.md  018-drive-upload-trainer-callback.md  019-windows-bat-launchers-uv.md  020-dynamic-multiprocess-tokenization.md  ADR-001-config-management.md  ADR-0010-abandon-colab-integration.md  ADR-0011-gpu-only-strict-batch-limit.md  ADR-0012-production-scale-pretraining.md  ADR-0013-metadata-prefix-boundary-enforcement.md  (+50 more)
logs/: eval_report_20260630_105135.md  eval_report_20260630_105608.md
results/: vram_verify_20260719_093240.json  vram_verify_20260719_093414.json  vram_verify_20260719_093650.json
scripts/: calc_search_space.py  drive_uploader.py  find_hparams.py  setup.bat  verify_compile_vram.py
src/: check_gpu.py  config.py  drive_uploader.py  env_snapshot.py  extract_data.py  hpo_manager.py  logger.py  main.py  model_utils.py  modern_gpt.py  normuon.py  prepare_dataset.py  registry.py  scaling_analysis.py  set_seed.py  split_dataset.py  step_law.py  test_import.py  train.py  train_model.py  train_tokenizer.py  trainer.py  training_config.py
tests/: check_corpus.py  drive_test.py  generate_test.py  test_150m.py  test_bf16.py  test_config.json  test_config_changes.py  test_resume_and_drive.py  test_tokenizer_integration.py
tools/: analyze_dataset_tokens.py  check_gpu.py  orchestrator.py  result_20260628_1837.md  result_20260704_1531.md  result_20260705_1227.md  result_20260705_1306.md  run_analyze_dataset_tokens.bat  update_hashes.py
(+59 files in other folders)
