[project]
name = "llm-training"
version = "0.1.0"
description = "Novel LLM pretraining pipeline with traceability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "accelerate>=0.30.0",
    "tokenizers>=0.19.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "mlflow>=2.10.0",
    "scipy>=1.11.0",
    "dvc>=3.0.0",
    "deepspeed>=0.14.0",
    "bitsandbytes>=0.43.0",
    "flash-attn>=2.5.0; platform_system == 'Linux'",
    "sentencepiece>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]

[project.scripts]
train = "src.main:main"
